[package]
name = "flo-observer-consumer"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-net = { path = "../net" }
flo-w3gs = { path = "../w3gs" }
flo-util = { path = "../util" }
flo-observer = { path = "../observer" }
flo-state = "1.0"
rusoto_core = "0.46.0"
rusoto_kinesis = "0.46.0"
thiserror = "1.0"
tokio = { version = "1.5.0", features = ["fs", "macros", "time", "rt-multi-thread"] }
redis = { version = "0.20.0", features = ["tokio-comp", "connection-manager"] }
once_cell = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
flate2 = "1.0"
tracing = "0.1"
backoff = "0.3"

[dev-dependencies]
dotenv = "0.15"