[package]
name = "flo-observer-edge"
version = "0.1.0"
edition = "2021"

[dependencies]
flo-net = { path = "../net" }
flo-w3gs = { path = "../w3gs" }
flo-util = { path = "../util" }
flo-observer = { path = "../observer" }
flo-observer-fs = { path = "../observer-fs" }
flo-observer-archiver = { path = "../observer-archiver" }
flo-types = { path = "../types" }
flo-grpc = { path = "../../deps/flo-grpc" }
flo-constants = { path = "../constants" }
flo-kinesis = { path = "../kinesis" }
flo-state = "1.1"
thiserror = "1.0"
tokio = { version = "1.21.2", features = ["macros", "time", "rt-multi-thread"] }
tokio-stream = { version = "0.1.10", features = ["sync"] }
tokio-util = { version = "0.6", features = ["time"] }
bytes = "1.2.1"
tracing = "0.1"
futures = "0.3.24"
lru = "0.7.8"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.15"
backoff = { version = "0.4" }
tonic = "0.6"
s2-grpc-utils = "0.2"
async-graphql = { version = "4.0", features = ["chrono"] }
rusoto_s3 = "0.47.0"
rusoto_core = "0.47.0"
base64 = "0.13.0"
flate2 = "1.0"

[dev-dependencies]
dotenv = "0.15"
anyhow = "1.0"
flo-log-subscriber = { path = "../log-subscriber" }

[build-dependencies]
flo-constants = { path = "../constants" }
