[package]
name = "flo-observer-fs"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-observer = { path = "../observer" }
flo-util = { path = "../util" }

rusoto_core = "0.47.0"
rusoto_kinesis = "0.47.0"
thiserror = "1.0"
tokio = { version = "1.21.2", features = [
  "fs",
  "macros",
  "time",
  "rt-multi-thread",
] }
once_cell = "1.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.2.1"
flate2 = "1.0"
tracing = "0.1"
backoff = "0.3"

[dev-dependencies]
flo-log-subscriber = { path = "../log-subscriber" }
