[package]
name = "flo-observer"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-net = { path = "../net" }
flo-w3gs = { path = "../w3gs" }
flo-util = { path = "../util" }
bytes = "1.0"
prost = "0.7.0"
thiserror = "1.0"
once_cell = "1.7"
rusoto_core = "0.46.0"
rusoto_kinesis = "0.46.0"
tracing = "0.1"
