[package]
name = "flo-observer"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-net = { path = "../net" }
flo-w3gs = { path = "../w3gs" }
flo-util = { path = "../util" }
bytes = "1.2.1"
prost = "0.9"
thiserror = "1.0"
once_cell = "1.15"
rusoto_core = "0.47.0"
rusoto_kinesis = "0.47.0"
tracing = "0.1"
jsonwebtoken = "7.2"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
